tests/snippets/invalid_snippets/extra_comma_in_snippet.snippet
<!javascript
  (
    "log",
    "Logs a Message to the console",
    ,
    ```javascript console.log("Hello world")```
  )
>
